--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -264,6 +264,8 @@ The next 2 graphs shows the comparison between the 3 version of the app; the ori
     \includegraphics[scale=0.4]{pagespeeds}
 \end{figure}
 
+\newline
+
 \section{Related Work}
 % We require at least 10 references. You need to compare and contrast your work to previous work.
 \subsection{Digua: Minifier and Obfuscator for Web Resources \cite{ciminiandigua}}
